Allow the Permissions API to get the status of the camera and microphone.

This CL adds camera and microphone to the permissions that can be
queried using navigator.permissions.query().

BUG=648553

Change-Id: I238ce81401862918c4a01b331142c59756862f5e
Reviewed-on: https://chromium-review.googlesource.com/765619
Reviewed-by: Raymes Khoury <raymes@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: Dominick Ng <dominickn@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516940}
Former-commit-id: 04f4a2b429d099ecfe0fb80de34797b4fd52fddf